/***********************************************************************
*FileName	:  ClinetMsg
*Author		:  fz
*Date		:  2016.4.1
*Description:  Client与Server之间通信消息
************************************************************************/

import "MessageBase.proto";
import "GlobalDef.proto";

/*测试消息*/
message MsgTestC
{
	required MsgBase base			= 1;
	required EPlatformType t1		= 2;
}

message MsgVerifyAccountReq
{
	required MsgBase base			= 1;
	required bytes account			= 2;
	optional bytes password			= 3;
	optional int32 dev_type			= 4;//设备类型
	optional bytes dev_key			= 5;//设备key
	optional EPlatformType pf_type	= 6;//平台类型 
	required VersionNum version		= 7;//客户端的版本
}
message MsgVerifyAccountRes
{
	required MsgBase base			= 1;
	required bytes base_ip			= 2;//游戏服务器ip
	required int32 base_port		= 3;//游戏服务器端口
	required int64 base_key			= 4;//用于游戏服的登录验证,有时效
}
message MsgLoginAccountReq
{
	required MsgBase base			= 1;
	required bytes account			= 2;
	required int64 base_key			= 3;
}
message MsgLoginAccountRes
{
	required MsgBase base			= 1;
	//角色列表
	//这里有一个想法,直接给一个服务器默认的角色(上次登录的角色),有需要的话也把帐号创建和角色创建一并处理掉,实现一个对玩家来说快速登录的界面,如果玩家想新建或换角色,在游戏内另外给与接口支持
}
message MsgLoginGameReq
{
	required MsgBase base			= 1;
}
message MsgLoginGameRes
{
	required MsgBase base			= 1;
}